--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "unleash-proxy-client": "^3.2.0",
+    "unleash-proxy-client": "3.3.0-alpha.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  }, 
+  "resolutions": {
+    "unleash-proxy-client": "3.3.0-alpha.1"
   }
 }
