--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "unleash-proxy-client": "^3.2.0",
+    "unleash-proxy-client": "3.3.0-alpha.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -25,6 +25,10 @@
       "react-app/jest"
     ]
   },
+  "resolutions": {
+    "unleash-proxy-client": "3.3.0-alpha.2"
+  },
+  
   "browserslist": {
     "production": [
       ">0.2%",
