--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "unleash-proxy-client": "3.3.0-alpha.4",
+    "unleash-proxy-client": "3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -24,9 +24,6 @@
       "react-app",
       "react-app/jest"
     ]
-  },
-  "resolutions": {
-    "unleash-proxy-client": "3.3.0-alpha.4"
   },
   
   "browserslist": {
